Implemented alternative Item Order package for ZOOM. If option "doc" is set,
that is treated as an ItemOrder with itemRequest being an XML document
external. The value of "doc" is the content.

Extended the GFS search facility. New member of bend_search_rr 
'estimated_hit_count' signals that hits is known to be an estmate
(higher or lower than real hit count). New member 'partial_resultset'
signals that the search was partial (hit count is lower or equal than
real hit count). For Z39.50, the information is stored in resultSetStatus
member of SearchResponse APDU. For SRU, the information is signalled
via SRU diagnostic 59: "Result set created with valid partial results
available".

--- 2.1.46 2007/01/13

Implemented bug #806: Deal with HTTP clients sending LF in HTTP headers.

Added ZOOM_connection_peek_event.

Implemented Generic select hook for ZOOM (bug #803). This is achieved with 
the following new functions:
 ZOOM_event_nonblock, ZOOM_connection_process,
 ZOOM_connection_get_{socket,mask,timeout}, 
 ZOOM_connection_fire_event_{timeout,socket}.
The existing blocking event handler, ZOOM_event, is a wrapper for the
+ blocking ZOOM_event_sys_{poll,select}.

Implemented function ccl_xml_config which parses XML version of CCL
configuration (bug #798).

Fixed bug #797: yaz_marc_write_xml does not honor character conversion.

Added timings utility (yaz/timing.h)

--- 2.1.44 2007/01/03

Added yaz_marc_write_xml which creates MARCXML/MarcXchange record as
Libxml2 tree.

Fixed bug #779: Rotation of apdu.log fails.

Fixed for character set conversions:
  Unicode to MARC-8 conversion for certain less preferred UTF-8 sequences.
  Honor G1 set in MARC-8 decoding.

--- 2.1.42 2006/12/17

Fixed bug #775: char conversion does not handle Alternative UTF-8
sequences.

Implemented function yaz_marc_read_line which parses MARC line format
records. There is a wealth of formats out there. So far, this function
reads line records produced by yaz_marc_write_line.
